--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Activity Someday By Zac</title>
+    <title>Activity Someday By Zac Family</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Activity Someday By Zac</h1>
+    <h1>Activity Someday By Zac Family</h1>
     <div class="main-container">
         <div class="input-container">
             <div class="form-group">
                 <label for="cement">Cement</label>
-                <input type="text" id="cement" name="cement" placeholder="HH:MM AM/PM" onfocus="showTimePicker('cement')">
+                <input type="time" id="cement" name="cement">
                 <button onclick="addSeconds('cement', 5400)">Next Loop Cement</button>
             </div>
             <div class="form-group">
                 <label for="oil">Oil</label>
-                <input type="text" id="oil" name="oil" placeholder="HH:MM AM/PM" onfocus="showTimePicker('oil')">
+                <input type="time" id="oil" name="oil">
                 <button onclick="addSeconds('oil', 6500)">Next Loop Oil</button>
             </div>
             <div class="form-group">
                 <label for="ten-point">10 Point</label>
-                <input type="text" id="ten-point" name="ten-point" placeholder="HH:MM AM/PM" onfocus="showTimePicker('ten-point')">
+                <input type="time" id="ten-point" name="ten-point">
                 <button onclick="addSeconds('ten-point', 6000)">Next Loop 10 Point</button>
             </div>
         </div>
