--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Activity Someday By Zac Family</title>
+    <title>Time Input Tracker</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1>Activity Someday By Zac Family</h1>
+    <h1>Time Input Tracker</h1>
     <div class="main-container">
         <div class="input-container">
             <div class="form-group">
@@ -23,7 +25,7 @@
             <div class="form-group">
                 <label for="ten-point">10 Point</label>
                 <input type="time" id="ten-point" name="ten-point">
-                <button onclick="addSeconds('ten-point', 5400)">Next Loop 10 Point</button>
+                <button onclick="addSeconds('ten-point', 6000)">Next Loop 10 Point</button>
             </div>
         </div>
         <div class="history-columns">
@@ -44,6 +46,28 @@
             </div>
         </div>
     </div>
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-database-compat.js"></script>
     <script src="script.js"></script>
+    <script>
+        // Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyBtZQ4r7WxSFg35DGhrygCMY7qwLIzsUdw",
+            authDomain: "someday-activity.firebaseapp.com",
+            databaseURL: "https://someday-activity-default-rtdb.asia-southeast1.firebasedatabase.app",
+            projectId: "someday-activity",
+            storageBucket: "someday-activity.appspot.com",
+            messagingSenderId: "971946504221",
+            appId: "1:971946504221:web:139f27f45429e2fca6d6f4"
+        };
+
+        // Initialize Firebase
+        const app = firebase.initializeApp(firebaseConfig);
+        const database = firebase.database();
+
+        loadHistoryFromFirebase(); // โหลดข้อมูลจาก Firebase
+    </script>
 </body>
+
 </html>
