change title and header

--- a/dashboard.html
+++ b/dashboard.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Someday Activity Dashboard By Zac Family</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div class="dashboard-header">
-        <h1>Activity Dashboard</h1>
+        <h1>Someday Activity Dashboard By Zac Family</h1>
     </div>
     <div class="dashboard-container">
         <table id="history-table">
