--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Time Input Tracker</title>
+    <title>Someday Activity Tracker By Zac Family</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h1>Time Input Tracker</h1>
+    <h1>Someday Activity Tracker By Zac Family</h1>
     <div class="main-container">
         <div class="input-container">
             <div class="form-group">
