--- a/dashboard.html
+++ b/dashboard.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Someday Activity Dashboard By Zac Family</title>
+    <title>Dashboard</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-    <div class="dashboard-header">
-        <h1>Someday Activity Dashboard By Zac Family</h1>
+    <div class="upcoming-activity-container">
+        <div id="upcoming-activity" class="activity-box">
+            <img id="upcoming-activity-img" src="" alt="Activity Image">
+            <div>
+                <h2 id="upcoming-activity-name">Next Activity</h2>
+                <p id="upcoming-activity-time">--:--</p>
+            </div>
+        </div>
     </div>
     <div class="dashboard-container">
         <table id="history-table">
@@ -48,5 +52,4 @@
         loadDashboardFromFirebase(); // โหลดข้อมูลจาก Firebase
     </script>
 </body>
-
 </html>
